fix callout group spacing

--- a/src/scss/components/_callout.scss
+++ b/src/scss/components/_callout.scss
@@ -14,6 +14,8 @@
     min-height: 300px;
     flex-direction: column;
     text-align: center;
+    padding-top: 0;
+    padding-bottom: 0;
   }
 }
 
@@ -34,8 +36,8 @@
 }
 
 .callout__text {
-  margin-bottom: 1rem;
   font-size: $paragraph-font-size;
+  margin-bottom: 1rem;
 }
 
 .callout__footer {
@@ -44,5 +46,6 @@
   @include media(lg) {
     margin-top: auto;
     margin-left: 0;
+    padding-bottom: 3rem;
   }
 }
